--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,10 @@
             <artifactId>flatlaf-intellij-themes</artifactId>
             <version>2.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE150</version>
+        </dependency>
     </dependencies>
 </project>
